--- a/options.html
+++ b/options.html
@@ -26,8 +26,7 @@
 <pre>
   <code class="language-javascript">$(".my_select_box").chosen({
     disable_search_threshold: 10,
-    no_results_text: "Oops, nothing found!",
-    width: "95%"
+    no_results_text: "Oops, nothing found!"
   });</code>
 </pre>
 
@@ -90,11 +89,6 @@
           <td>single_backstroke_delete</td>
           <td>true</td>
           <td>By default, pressing delete/backspace on multiple selects will remove a selected choice. When <code class="language-javascript">false</code>, pressing delete/backspace will highlight the last choice, and a second press deselects it.</td>
-        </tr>
-        <tr>
-          <td>width</td>
-          <td>Original select width.</td>
-          <td>The width of the Chosen select box. By default, Chosen attempts to match the width of the select box you are replacing. If your select is hidden when Chosen is instantiated, you must specify a width or the select will show up with a width of 0.</td>
         </tr>
         <tr>
           <td>display_disabled_options</td>
